# routes/API/Studios.php
@@ -7,9 +7,6 @@ use Illuminate\Support\Facades\Route;
 Route::prefix('/studios')
     ->name('studios.')
     ->group(function() {
-        Route::get('/', [StudioController::class, 'overview'])
-            ->name('overview');
-
         Route::get('/{studio}', [StudioController::class, 'details'])
             ->middleware('kurozora.userauth:optional')
             ->name('details');
